--- a/CS570/a1/makefile
+++ b/CS570/a1/makefile
@@ -8,7 +8,7 @@ PROGRAM = sem
 ## Make definitions ##
 # -pthread maybe needed on linux machines
 CC = gcc -g -Wall 
-SOURCE = p1main.o p1helper.o
+SOURCE = p1main.o p1thread.o p1helper.o
 
 
 ${PROGRAM}:	${SOURCE}
@@ -16,6 +16,9 @@ ${PROGRAM}:	${SOURCE}
 
 p1main.o:	p1main.c p1.h
 	gcc -c p1main.c
+
+p1thread.o:	p1thread.c p1.h
+	gcc -c p1thread.c
 
 p1helper.o:	p1helper.c p1.h
 	gcc -c p1helper.c
