+README file, added description

--- a/CS570/a1/makefile
+++ b/CS570/a1/makefile
@@ -1,3 +1,10 @@
+ 
+# @author: Brian Gebel, Abhishek Choudhary
+# @username: masc0974, masc0980
+# @classInfo: CS570, Summer 2013
+# @Assignment # 1, Semaphores to manage a shared file
+# @filename: makefile
+
 ########################################
 ## Makefile for Program 1
 ########################################
